<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/header_config">

        <EditTextPreference
            app:defaultValue="192.168.0.181"
            app:key="@string/txt_key_server"
            app:title="@string/title_server"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="1433"
            app:key="@string/txt_key_port"
            app:title="@string/title_port"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="SWMS_STARRICH"
            app:key="@string/txt_key_database"
            app:title="@string/title_database"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="sa"
            app:key="@string/txt_key_user"
            app:title="@string/title_user"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="sato12345"
            app:key="@string/txt_key_password"
            app:title="@string/title_password"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="1"
            app:key="@string/txt_key_timeout"
            android:inputType="textPassword"
            app:title="@string/title_timeout"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
