<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_liquid_cheese">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_app_name"
            style="@style/TextLarge.White.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_full_app_name" />

        <TextView
            android:id="@+id/tv_app_version"
            style="@style/TextMedium.White.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_app_version_unset" />

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/pb_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="86dp"
            android:layout_marginBottom="32dp"
            android:visibility="visible"
            app:indicatorColor="@color/white"
            app:indicatorName="BallPulseIndicator" />

        <TextView
            android:id="@+id/tv_loading"
            style="@style/TextMedium.White.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/txt_loading" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>